<resources>
    <string name="app_name">To Do List</string>
    <string name="splash">Splash</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="to_do">To Do</string>
    <string name="clock">clock</string>
    <string name="hello_blank_fragment">Hello blank fragment to do</string>
    <string name="todo_name">ToDo name...</string>
    <string name="description">Description...</string>
    <string name="time">Time...</string>
    <string name="submit">Submit</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="save_changes">Save Changes</string>
    <string name="there_is_no_to_dos_yet">There is no To Dos yet!</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="done">Done!</string>
</resources>