<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.bottomsheet.BottomSheetFragment"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:padding="10dp">

    <View
                android:id="@+id/expand_line"
                android:layout_width="60dp"
                android:layout_height="4dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/line"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/expand_line"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:boxStrokeWidth="2dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/todo_name"
                    android:textColorHint="@color/hint" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/input_name"
        app:layout_constraintStart_toStartOf="parent"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/description"
            android:textColorHint="@color/hint"
            android:inputType="text|textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="12:50AM"
            android:gravity="start"
            android:textSize="17sp"
            android:background="@drawable/rounded_time"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingVertical="15dp"
            android:paddingHorizontal="12dp"
            app:drawableEndCompat="@drawable/ic_time" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="13dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:padding="16dp"
        android:textAlignment="textStart"
        android:drawableEnd="@drawable/ic_check"
        android:drawableTint="@color/white"
        android:theme="@style/MyButtonTheme"
        app:cornerRadius="6dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>